# lfc-haskell

./: .travis.yml  LICENSE  README.md  lambda.cabal  lfc.cabal  package.yaml  stack.yaml
src/Data/Functor/Foldable/: Ext.hs
src/LFC/: Annotate.hs  Error.hs  Example.hs  Fresh.hs  FreshName.hs  Infer.hs  Memoize.hs  Name.hs  Prelude.hs  PrettyPrint.hs  Subst.hs  Tree.hs  Ty.hs  Unify.hs
src/LFC/Tree/: Typed.hs  Untyped.hs
src/Language/Lambda/: Annotate.hs  Error.hs  Example.hs  Fresh.hs  Infer.hs  Memoize.hs  Name.hs  PrettyPrint.hs  Subst.hs  Tree.hs  Ty.hs  Unify.hs
src/Language/Lambda/Tree/: Typed.hs  Untyped.hs
