
name:                lambda
version:             0.1.0.0
synopsis:            Just me messing around with recursion schemes and Cofree.
description:         Please see README.md
homepage:            https://github.com/romac/lambda#readme
license:             BSD3
license-file:        LICENSE
author:              Romain Ruetschi
maintainer:          romain.ruetschi@gmail.com
copyright:           2016 Romain Ruetschi
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  build-depends:       base >= 4.7 && < 5
                     , free
                     , recursion-schemes

  exposed-modules:     Language.Lambda.Annotate
                     , Language.Lambda.Infer
                     , Language.Lambda.Name
                     , Language.Lambda.PrettyPrint
                     , Language.Lambda.Tree
                     , Language.Lambda.Tree.Typed
                     , Language.Lambda.Tree.Untyped
                     , Language.Lambda.Ty
                     , Data.Functor.Foldable.Ext

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/romac/lambda

